@@ -1,5 +1,8 @@
 2017-09-16  Allen D. Ball  <ball@sol>
 
+	* src/main/java/ball/databind/JSONBeanSerializer.java:
+	Initial writing.
+
 	* src/main/java/ball/databind/JSONBeanDeserializer.java:
 	Added generic parameter.
 
